# bynder_mle_case

./: .gitignore  README.md  agent.py  app.py  chainlit.md  config.py  evaluate.py  ingest.py  logging_config.py  prompts.py  pyproject.toml  retriever.py
MLE_Assignment/: sample-test-questions.md
MLE_Assignment/bynder_support_md/: 10257152407058_Delivery_Metrics_-_Asset_Level_Report__Bynder_Supp.md  10309197472914_The_page_you_were_looking_for_doesnt_exist__Bynder.md  10341416276370_Create_Metaproperty_Options__Bynder_Support.md  10436495883282_How_To_Crop_Images_And_Recommended_Image_Sizes_In_.md  11234028301458_Delivery_Metrics_Data_Points__Bynder_Support.md  11400106439698_Integration_Hub__Bynder_Support.md  11682719841170_Analytics_for_BI_Access__Bynder_Support.md  11686094184850_Working_with_Text_in_Studio__Bynder_Support.md  12427637384338_Create_Predictable_URLs_in_DAT__Bynder_Support.md  13811659311890_Understanding_Bynders_Text-In-Image_Search__Bynder.md  13811681142802_How_To_Use_Image_Based_Similarity_Search__Bynder_S.md  13811974882962_Duplicate_Finder_in_the_Waiting_Room__Bynder_Suppo.md  13812016590354_Search_by_Image__Bynder_Support.md  13812491746194_Duplicate_Finder_during_Upload__Bynder_Support.md  14303113997330_Apply_Custom_Fonts_in_Text_Overlay_in_DAT__Bynder_.md  14305753258258_Antivirus_Scan_for_Uploads__Bynder_Support.md  14379638195858_Exploring_Analytics_Packages__Bynder_Support.md  14465131283218_How_To_Access_And_Export_Analytics_Reports__Bynder.md  14713807155090_Speech-to-Text_for_Video_and_Audio_Assets__Bynder_.md  (+317 more)
tests/: eval.py
