[project]
name = "bynder-mle-case"
version = "0.1.0"
description = "Customer support agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9",
    "chainlit>=2.11.1",
    "chromadb>=1.5.9",
    "langchain>=1.2.17",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.34.0",
    "tqdm>=4.67.3",
]
